# PyClassicGames

./: .gitignore  LICENSE  PyClassicGames.spec  README.md  compile.sh  main.py  pyproject.toml  recursos_rc.py  requirements.txt  resursos.qrc  version.py
.github/workflows/: build_and_release.yml
assets/: resources.qrc
custom/: launch.py
data/: valid_words.txt  words.txt
games/: data.json  datagame.py  knightstour.py  minesweeper.py  wordle.py
modules/: config.py  database.py  export.py  update.py
ui/: MainWindow.py  MainWindow.ui  about_as.ui  about_us.py  about_us.ui  main_window.py  main_window.ui  score.py  score.ui
